{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 99,
  "lineage": "f8026c64-22bf-51dc-cd76-4183414075e1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-010c3d2b6ab6e40e9",
            "association_id": "eipassoc-08878cd00526a0d00",
            "domain": "vpc",
            "id": "eipalloc-010c3d2b6ab6e40e9",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-021bd2030cf32c762",
            "private_dns": "ip-10-0-0-15.eu-north-1.compute.internal",
            "private_ip": "10.0.0.15",
            "public_dns": "ec2-16-16-235-128.eu-north-1.compute.amazonaws.com",
            "public_ip": "16.16.235.128",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-064087b8d355e9051",
            "arn": "arn:aws:ec2:eu-north-1:838207118309:instance/i-0e6ff9fd7b864371d",
            "associate_public_ip_address": false,
            "availability_zone": "eu-north-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e6ff9fd7b864371d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "Mostafa-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-056083f2b6e52f89c",
            "private_dns": "ip-10-0-1-16.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.16",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-044d95fc0e565f9dc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-092769e5edc0adfdb",
            "tags": {
              "Name": "private-app"
            },
            "tags_all": {
              "Name": "private-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03b430cc2e18167c1"
            ]
          },
          "dependencies": [
            "aws_subnet.iti-vpc-subnets",
            "aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-064087b8d355e9051",
            "arn": "arn:aws:ec2:eu-north-1:838207118309:instance/i-0edf56a59e0d8890f",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0edf56a59e0d8890f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "Mostafa-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01ca576649b86363d",
            "private_dns": "ip-10-0-0-213.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.213",
            "public_ip": "16.170.227.106",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-049c8e70502a83bc8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-083a0673bbd05c462",
            "tags": {
              "Name": "public-proxy"
            },
            "tags_all": {
              "Name": "public-proxy"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-077329dc0db4559be"
            ]
          },
          "dependencies": [
            "aws_subnet.iti-vpc-subnets",
            "aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "iti-vpc-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:838207118309:internet-gateway/igw-0e57d439d8cfbe04f",
            "id": "igw-0e57d439d8cfbe04f",
            "owner_id": "838207118309",
            "tags": {
              "Name": "iti-igw-terraform"
            },
            "tags_all": {
              "Name": "iti-igw-terraform"
            },
            "vpc_id": "vpc-0bd80a82cf3441974"
          },
          "dependencies": [
            "aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-010c3d2b6ab6e40e9",
            "association_id": "eipassoc-08878cd00526a0d00",
            "connectivity_type": "public",
            "id": "nat-0477b024ff85233c4",
            "network_interface_id": "eni-021bd2030cf32c762",
            "private_ip": "10.0.0.15",
            "public_ip": "16.16.235.128",
            "subnet_id": "subnet-083a0673bbd05c462",
            "tags": {
              "Name": "NAT-1-Terraform"
            },
            "tags_all": {
              "Name": "NAT-1-Terraform"
            }
          },
          "dependencies": [
            "aws_eip.nat-gateway",
            "aws_subnet.iti-vpc-subnets",
            "aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "igw-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:838207118309:route-table/rtb-0e793ea54876088ca",
            "id": "rtb-0e793ea54876088ca",
            "owner_id": "838207118309",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e57d439d8cfbe04f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "igw-route-terra"
            },
            "tags_all": {
              "Name": "igw-route-terra"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bd80a82cf3441974"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.iti-vpc-igw",
            "aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:838207118309:route-table/rtb-050d63503d990a56a",
            "id": "rtb-050d63503d990a56a",
            "owner_id": "838207118309",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0477b024ff85233c4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nat-route-terra"
            },
            "tags_all": {
              "Name": "nat-route-terra"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bd80a82cf3441974"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.nat-gateway",
            "aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1d137d4d392dd40",
            "route_table_id": "rtb-050d63503d990a56a",
            "subnet_id": "subnet-092769e5edc0adfdb"
          },
          "dependencies": [
            "aws_eip.nat-gateway",
            "aws_nat_gateway.nat-gateway",
            "aws_route_table.nat-route-table",
            "aws_subnet.iti-vpc-subnets",
            "aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publicSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ec88e8bdb0419eb",
            "route_table_id": "rtb-0e793ea54876088ca",
            "subnet_id": "subnet-083a0673bbd05c462"
          },
          "dependencies": [
            "aws_internet_gateway.iti-vpc-igw",
            "aws_route_table.igw-route-table",
            "aws_subnet.iti-vpc-subnets",
            "aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:838207118309:security-group/sg-03b430cc2e18167c1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03b430cc2e18167c1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-077329dc0db4559be"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "private-SG-terraform",
            "name_prefix": "",
            "owner_id": "838207118309",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bd80a82cf3441974"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:838207118309:security-group/sg-077329dc0db4559be",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-077329dc0db4559be",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "public-SG-terraform",
            "name_prefix": "",
            "owner_id": "838207118309",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bd80a82cf3441974"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "private-SG-inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 0,
            "id": "sgrule-4275207631",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-03b430cc2e18167c1",
            "security_group_rule_id": "sgr-0045b2c8cf82208b9",
            "self": false,
            "source_security_group_id": "sg-077329dc0db4559be",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.private-sg",
            "aws_security_group.public-sg",
            "aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "iti-vpc-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:838207118309:subnet/subnet-083a0673bbd05c462",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-083a0673bbd05c462",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "838207118309",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-0bd80a82cf3441974"
          },
          "dependencies": [
            "aws_vpc.iti-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:838207118309:subnet/subnet-092769e5edc0adfdb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-092769e5edc0adfdb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "838207118309",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-2"
            },
            "tags_all": {
              "Name": "private-subnet-2"
            },
            "vpc_id": "vpc-0bd80a82cf3441974"
          },
          "dependencies": [
            "aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "iti-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:838207118309:vpc/vpc-0bd80a82cf3441974",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0015d8a80e5a4947a",
            "default_route_table_id": "rtb-0b6a31ea1294e3e31",
            "default_security_group_id": "sg-0dfa54e511f0951f1",
            "dhcp_options_id": "dopt-02141b8dadd098dc5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bd80a82cf3441974",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b6a31ea1294e3e31",
            "owner_id": "838207118309",
            "tags": {
              "Name": "iti-vpc-terraform"
            },
            "tags_all": {
              "Name": "iti-vpc-terraform"
            }
          }
        }
      ]
    }
  ]
}